#+STARTUP:showall

* Changelog

** Next

- Added support for =org-ref=. See [[https://github.com/mssola/soria/commit/2a59db06a319500fcb0671f1545433b16309d00a][2a59db06a319]].
- Fixed the =mu4e-ok-face=. See [[https://github.com/mssola/soria/commit/c2236e4a1c6261137e6fde01947075652027f378][c2236e4a1c62]].

** 0.4.0

- Added support for =treemacs=. See [[https://github.com/mssola/soria/commit/62d1d61994b4889f8fff16978b7dfa1a047f6832][62d1d61994b4]].
- The =master= branch has been renamed into =main=.

** 0.3.3

- Do not highlight file extensions differently in =helm=. See [[https://github.com/mssola/soria/commit/7335adaa6e23d8aa10d2ca68e9ce2ac7fee8664c][7335adaa6e2]].
- Added support for =markup-faces= (which also include =adoc-mode=). See [[https://github.com/mssola/soria/commit/789f0a3474e6ad6c11e07f2c61d5994b2375bdba][789f0a3474e6]].
- Added support for =company-mode= and =company-box=. See [[https://github.com/mssola/soria/commit/390f03333e2e6083ee5d7f9b36c2e794105cf466][390f03333e2e]].
- Fixed Helm selection for GNU Emacs 27.x. See [[https://github.com/mssola/soria/commit/41520c0418a2a5468ac7696159a7dedb558187a7][41520c0418a2]].
- Added support for =org-drawer= and =org-special-keyword=. See [[https://github.com/mssola/soria/commit/8539cc132c92519b9053ed48d1bdecac6a64bdd5][8539cc132c92]].
- Added support for =mode-line= and =doom-modeline=. See [[https://github.com/mssola/soria/commit/ed79c3acfeb457e9d1b6fbb3c97269723e99f633][ed79c3acfeb4]].
- Improved =message= support by adding =message-cited-text-x= levels. See [[https://github.com/mssola/soria/commit/0f73c5a87b874e72ed286cf43e0b8dfec73769c3][0f73c5a87b87]].

** 0.3.2

- Changed =soria-theme-purple-identifiers= so it's interactive. See [[https://github.com/mssola/soria/commit/ababa4f383fc038a3b03babb99e7dbbc4f1aa3aa][ababa4f383fc]].

** 0.3.1

- Added a =build= target to the Makefile. See [[https://github.com/mssola/soria/commit/524b5a1830df4dc90a7a5fce6e06f5f4d9f77904][524b5a1830df]].

** 0.3.0
